--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="flex flex-col h-screen w-screen text-sm text-gray-500">
         <div class="flex-1 flex overflow-y-hidden">
           <div
-            class="sidebar bg-gray-900-spotify w-48 flex flex-col justify-between font-semibold"
+            class="sidebar gray-900-spotify w-48 flex flex-col justify-between font-semibold"
           >
             <ul class="py-6">
               <li class="border-l-4 border-green-600">
@@ -208,7 +208,7 @@
           </div>
           <!-- end of spotify sidebar -->
           <div
-            class="content-spotify bg-gray-800-spotify flex-1 flex-col overflow-y-auto"
+            class="content-spotify gray-800-spotify flex-1 flex-col overflow-y-auto"
           >
             <div class="upper-menu px-4 py-3 flex items-center justify-between">
               <div class="search-bar flex items-center">
@@ -268,7 +268,7 @@
 
                 <div class="user-icon ml-3 flex items-center">
                   <img
-                    src="/public/img/now_playing.jpg"
+                    src="/img/now_playing.jpg"
                     class="h-10 rounded-full"
                     alt=""
                   />
@@ -299,7 +299,7 @@
               </h2>
               <div class="shortcuts mt-2 flex justify-between">
                 <div class="global w-56">
-                  <img src="/public/img/global_50.jpg" class="h-56" alt="" />
+                  <img src="/img/global_50.jpg" class="h-56" alt="" />
                   <h2 class="font-bold text-white mt-2">Global Top 50</h2>
                   <p class="font-semibold mt-1">
                     Your daily update of the most played tracks right now.
@@ -310,7 +310,7 @@
                 </div>
 
                 <div class="mood-booster w-56">
-                  <img src="/public/img/mood_booster.jpg" class="h-56" alt="" />
+                  <img src="/img/mood_booster.jpg" class="h-56" alt="" />
                   <h2 class="font-bold text-white mt-2">Mood Booster</h2>
                   <p class="font-semibold mt-1">
                     Get happy with today's dose of feel-good songs!
@@ -321,7 +321,7 @@
                 </div>
 
                 <div class="mood-booster w-56">
-                  <img src="/public/img/pop_punk.jpg" class="h-56" alt="" />
+                  <img src="/img/pop_punk.jpg" class="h-56" alt="" />
                   <h2 class="font-bold text-white mt-2">Pop Punk's Not Dead</h2>
                   <p class="font-semibold mt-1">
                     All the best new songs from the pop punk scene.
@@ -332,7 +332,7 @@
                 </div>
 
                 <div class="mood-booster w-56">
-                  <img src="/public/img/twice.jpg" class="h-56" alt="" />
+                  <img src="/img/twice.jpg" class="h-56" alt="" />
                   <h2 class="font-bold text-white mt-2">This Is TWICE</h2>
                   <p class="font-semibold mt-1">
                     The 9-member K-Pop group has won ONCE's hearts around the
@@ -350,7 +350,7 @@
 
               <div class="charts mt-2 flex justify-between">
                 <div class="global w-56">
-                  <img src="/public/img/global_50.jpg" class="h-56" alt="" />
+                  <img src="/img/global_50.jpg" class="h-56" alt="" />
                   <h2 class="font-bold text-white mt-2">Global Top 50</h2>
                   <p class="font-semibold mt-1">
                     Your daily update of the most played tracks right now.
@@ -361,7 +361,7 @@
                 </div>
 
                 <div class="mood-booster w-56">
-                  <img src="/public/img/mood_booster.jpg" class="h-56" alt="" />
+                  <img src="/img/mood_booster.jpg" class="h-56" alt="" />
                   <h2 class="font-bold text-white mt-2">Mood Booster</h2>
                   <p class="font-semibold mt-1">
                     Get happy with today's dose of feel-good songs!
@@ -372,7 +372,7 @@
                 </div>
 
                 <div class="mood-booster w-56">
-                  <img src="/public/img/pop_punk.jpg" class="h-56" alt="" />
+                  <img src="/img/pop_punk.jpg" class="h-56" alt="" />
                   <h2 class="font-bold text-white mt-2">Pop Punk's Not Dead</h2>
                   <p class="font-semibold mt-1">
                     All the best new songs from the pop punk scene.
@@ -383,7 +383,7 @@
                 </div>
 
                 <div class="mood-booster w-56">
-                  <img src="/public/img/twice.jpg" class="h-56" alt="" />
+                  <img src="/img/twice.jpg" class="h-56" alt="" />
                   <h2 class="font-bold text-white mt-2">This Is TWICE</h2>
                   <p class="font-semibold mt-1">
                     The 9-member K-Pop group has won ONCE's hearts around the
@@ -401,7 +401,7 @@
 
               <div class="popular-playlists mt-2 flex justify-between">
                 <div class="global w-56">
-                  <img src="/public/img/global_50.jpg" class="h-56" alt="" />
+                  <img src="/img/global_50.jpg" class="h-56" alt="" />
                   <h2 class="font-bold text-white mt-2">Global Top 50</h2>
                   <p class="font-semibold mt-1">
                     Your daily update of the most played tracks right now.
@@ -412,7 +412,7 @@
                 </div>
 
                 <div class="mood-booster w-56">
-                  <img src="/public/img/mood_booster.jpg" class="h-56" alt="" />
+                  <img src="/img/mood_booster.jpg" class="h-56" alt="" />
                   <h2 class="font-bold text-white mt-2">Mood Booster</h2>
                   <p class="font-semibold mt-1">
                     Get happy with today's dose of feel-good songs!
@@ -423,7 +423,7 @@
                 </div>
 
                 <div class="mood-booster w-56">
-                  <img src="/public/img/pop_punk.jpg" class="h-56" alt="" />
+                  <img src="/img/pop_punk.jpg" class="h-56" alt="" />
                   <h2 class="font-bold text-white mt-2">Pop Punk's Not Dead</h2>
                   <p class="font-semibold mt-1">
                     All the best new songs from the pop punk scene.
@@ -434,7 +434,7 @@
                 </div>
 
                 <div class="mood-booster w-56">
-                  <img src="/public/img/twice.jpg" class="h-56" alt="" />
+                  <img src="/img/twice.jpg" class="h-56" alt="" />
                   <h2 class="font-bold text-white mt-2">This Is TWICE</h2>
                   <p class="font-semibold mt-1">
                     The 9-member K-Pop group has won ONCE's hearts around the
@@ -450,7 +450,7 @@
           <!-- end of spotify content -->
 
           <div
-            class="friend-activity w-64 bg-gray-900-spotify flex flex-col font-semibold"
+            class="friend-activity w-64 gray-900-spotify flex flex-col font-semibold"
           >
             <div class="header py-6 px-2">
               <h1
@@ -461,7 +461,7 @@
             </div>
             <div class="friends flex px-3 items-center">
               <img
-                src="/public/img/now_playing.jpg"
+                src="/img/now_playing.jpg"
                 class="h-10 rounded-full"
                 alt=""
               />
@@ -487,7 +487,7 @@
           <!-- end of friend activity sidebar -->
         </div>
 
-        <div class="bg-gray-700-spotify h-20 flex justify-between">
+        <div class="gray-700-spotify h-20 flex justify-between">
           <div class="music-info py-5 px-3 flex flex-col">
             <div class="music-title flex items-center">
               <h2 class="text-white font-semibold">as long as it takes you</h2>
@@ -646,7 +646,7 @@
             >
               <span class="text-xs">0:00</span>
               <div
-                class="bg-gray-500 rounded-lg w-full xl:w-200 h-1 ml-3 hover:bg-green-600"
+                class="bg-gray-500 rounded-lg w-full w-200 h-1 ml-3 hover:bg-green-600"
               ></div>
               <span class="text-xs ml-3">3:04</span>
             </div>
